@startuml

title __LINE's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        package com.anniefraz.dissertation.gin.edit.line {
          class InsertLineEdit {
              - lineNumber : int
              - lineContents : String
              + InsertLineEdit()
              + toString()
              # applyMethod()
          }
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        package com.anniefraz.dissertation.gin.edit.line {
          class MoveLineEdit {
              - sourceLineIndex : int
              - destinationLineIndex : int
              + MoveLineEdit()
              # applyMethod()
              + toString()
          }
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        package com.anniefraz.dissertation.gin.edit.line {
          class RemoveLineEdit {
              - lineNumber : int
              + RemoveLineEdit()
              # applyMethod()
              + toString()
          }
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.gin {
      package com.anniefraz.dissertation.gin.edit {
        package com.anniefraz.dissertation.gin.edit.line {
          class SwapLineEdit {
              - firstLineIndex : int
              - secondLineIndex : int
              + SwapLineEdit()
              # applyMethod()
              + toString()
          }
        }
      }
    }
  }
  

  InsertLineEdit -up-|> SingleClassEdit
  MoveLineEdit -up-|> SingleClassEdit
  RemoveLineEdit -up-|> SingleClassEdit
  SwapLineEdit -up-|> SingleClassEdit


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
